Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <li>foodnetwork.com</li>
 <li>hgtv.com</li>
 <li>internal team tools</li>
-</ul><p>so my stuff in on github is mostly small side projects.  exploring backbone-y and grunt-like things.</p>
+</ul><p>so my stuff in on github is mostly small side projects.  exploring backbone-y and grunt-like things and javascript in general.</p>
         </section>
 
         <footer>
