Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Mattford.co by 7e7</title>
+    <title>This is a webpage by 7e7</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
       <div class="inner">
 
         <header>
-          <h1>Mattford.co</h1>
-          <h2></h2>
+          <h1>This is a webpage</h1>
+          <h2>For some reason, you're here</h2>
         </header>
 
         <section id="downloads" class="clearfix">
@@ -30,7 +30,7 @@
 
         <section id="main_content">
           <h3>
-<a name="this-is-a-webpage-or-something" class="anchor" href="#this-is-a-webpage-or-something"><span class="octicon octicon-link"></span></a>This is a webpage or something?</h3>
+<a name="sorry-if-you-are-looking-for-something-impressive" class="anchor" href="#sorry-if-you-are-looking-for-something-impressive"><span class="octicon octicon-link"></span></a>Sorry if you are looking for something impressive</h3>
 
 <p>I'm a programmer, mostly working on front end/user interface systems.  Currently contribing to closed-source projects: </p>
 
